--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -35,6 +35,11 @@ ion-card{
     margin-bottom: 0px;
     padding-top: 20px;
     padding-bottom: 50px;
+    top: 23%;
+    width: 100%;
+    bottom: 0px;
+    position: fixed;
+    overflow-y:scroll;
     
 }
 .ready{
