--- a/src/app/sales/sales.page.scss
+++ b/src/app/sales/sales.page.scss
@@ -1,6 +1,9 @@
 .body{
     width: 100%;
-    height: 10000px;
+    position: fixed;
+    overflow-y: scroll;
+    bottom: 0px;
+    top: 16%;
     margin-bottom: 0px;
     background-color: white;
 }
