--- a/src/app/stock/stock.page.scss
+++ b/src/app/stock/stock.page.scss
@@ -3,9 +3,10 @@
     background-color: white;
     border-radius: 20px 20px 0px 0px;
     width: 100%;
-    height:10000px;
-    margin-bottom: 0px;
-    margin-top: 40px;
+    position: fixed;
+    bottom: 0px;
+    top: 10%;
+    overflow-y:scroll;
 }
 .image{
     object-fit: contain;
