--- a/src/app/order-stats/order-stats.page.html
+++ b/src/app/order-stats/order-stats.page.html
@@ -53,7 +53,7 @@
       <ion-label>Completed Orders</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <div style="position: fixed;bottom: 0px;overflow-y: scroll;width: 100%;top: 25%;">
+  <div  class="openOrder">
     <div *ngIf="ready;open">
       <div *ngIf="loader" text-center style="padding-top: 50px;text-align: center;">
         <ion-spinner class="loader" name="lines" color="primary"></ion-spinner>
