--- a/src/app/products/products.page.scss
+++ b/src/app/products/products.page.scss
@@ -27,9 +27,13 @@ ion-select{
     background-color: white;
     border-radius: 20px 20px 0px 0px;
     width: 100%;
-    height: 10000px;
+    position: fixed;
+    bottom: 0px;
+    top: 10%;
+    overflow-y:scroll;
+    // height: 10000px;
     margin-bottom: 0px;
-    margin-top: 40px;
+    // margin-top: 40px;
 }
 .buttons{
     padding-top: 60%;
