--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -9,10 +9,10 @@
       <ion-icon name="easel"></ion-icon>
       <!-- <ion-label>Soko</ion-label> -->
     </ion-tab-button>
-    <ion-tab-button tab="tab1">
+    <!-- <ion-tab-button tab="tab1">
       <ion-icon name="qr-scanner"></ion-icon>
-      <!-- <ion-label>Scan</ion-label> -->
-    </ion-tab-button>
+      <ion-label>Scan</ion-label> 
+    </ion-tab-button> -->
     <ion-tab-button tab="notifications" [ngClass]="{'animate': animate == true}" >
       <ion-icon name="notifications" >
       </ion-icon> <ion-badge id="notifications-badge" *ngIf="count !== 0">{{count}}</ion-badge>
